--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,30 @@
     display: flex;
 }
 
+.main {
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+}
+
+.image-row {
+    display: flex; 
+}
+
+
+.image-block {
+    width: 100px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+}
+
+.image{
+    flex-grow: 1;
+    background-color: purple;
+}
+
+
 .item {
     flex: 1; 
     font-size: 18px;
