--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 .hero-main {
     font-size: 48px;
     color: #F9FAF8; 
-    weight: 900; 
+    font-weight: 900; 
 }
 
 .header-logo {
@@ -42,6 +42,7 @@
 
 .image-row {
     display: flex; 
+    gap: 50px; 
 }
 
 
@@ -57,6 +58,21 @@
     background-color: purple;
 }
 
+.quote-block {
+    background-color: #E5E7EB;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quote {
+    width: 600px;
+    font-size: 36px;
+    font-weight: 100 !important; 
+    font-style: italic;
+    color: #1F2937; 
+}
 
 .item {
     flex: 1; 
