--- a/styles.css
+++ b/styles.css
@@ -26,12 +26,14 @@
 }
 
 .topbar {
+    width: 80%;
     display: flex;
-
+    justify-content: space-between;
 }
 
 .container {
     display: flex;
+    margin-left: auto;
 }
 
 .main {
