--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,11 @@
     display: flex;
     width: 80%; 
     gap: 10px; 
+    margin-bottom: 100px;
 }
 
 .hero-img {
-    width: 700px;
+    width: 900px;
     background-color: gray;
 }
 
@@ -56,6 +57,12 @@
     align-items: center;
 }
 
+.info-header {
+    font-size: 36px;
+    color: #1F2937; 
+    font-weight: 900; 
+}
+
 .image-row {
     display: flex; 
     gap: 50px; 
@@ -64,14 +71,19 @@
 
 .image-block {
     width: 100px;
-    height: 100px;
+    height: 160px;
     display: flex;
     flex-direction: column;
 }
 
 .image{
-    flex-grow: 1;
-    background-color: purple;
+    background-color: white;
+    border-color: #3882F6;
+    border-style: solid;
+    border-width: 2px;
+    height: 100px;
+    width: 100px;
+    border-radius: 10px;
 }
 
 .quote-block {
@@ -94,4 +106,15 @@
     flex: 1; 
     font-size: 18px;
     color: #E5E7EB;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%; 
+    background-color: #3882F6;
+    margin: auto; 
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
