--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Roboto', Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .header {
@@ -117,7 +117,7 @@
 }
 
 .quote {
-    width: 60%;
+    width: 62%;
     font-size: 32px;
     font-weight: 100;
     font-style: italic;
