--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,14 @@
     font-style: italic;
     color: #1F2937; 
     margin-top: 100px; 
+    margin-bottom: -10px;
+}
+.quote-author {
+    width: 56%;
+    text-align: right;
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 100px; 
 }
 
 .item {
@@ -130,6 +138,7 @@
     font-size: 18px;
     color: #E5E7EB;
 }
+
 
 .footer {
     display: flex;
